# LibreGaming

./: LibreGaming  LibreGaming.py  MANIFEST.in  README.md  getPackageManager  libregaming.sh  requirement.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: python-app.yml
LibreGaming/: Arch.py  LibreGaming.py  LibreGamingQt.py  TUI.py  __init__.py  __main__.py  getPackageManager.sh  getRoot.sh
LibreGaming.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
LibreGaming/distro_pkgs/: Arch.py  Common_Pkgs.py  Fedora.py  OpenSUSE.py  Ubuntu.py
distro_pkgs/: Common_Pkgs.py  Fedora.py  Ubuntu.py
test/: tests_LibreGaming.py
