[metadata]
name = LibreGaming
version = 0.0.1
description = Install Gaming Packages with ease
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ahmed-Al-Balochi/LibreGaming.git
author = Ahmed Al Balochi
license = GPL-3.0
license_files =
	LICENSE
    getPackageManager.sh

[options]
packages = find:
install_requires = 
	argparse
    requests
	configparser
python_requires = >3.9

[options.entry_points]
console_scripts =
    LibreGaming = LibreGaming:main

