[metadata]
name = LibreGaming 
version = 0.1.0
description = Install Gaming Packages with ease
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ahmed-Al-Balochi/LibreGaming.git
author = Ahmed Al Balochi
license = GPL-3.0
license_files =
	LICENSE

[options]
include_package_data = True
packages = find:
install_requires =
	argparse
	requests
	wget
	protonup
	npyscreen
python_requires = >3.7

[options.entry_points]
console_scripts =
    libregaming  = LibreGaming:main 
    LibreGaming  = LibreGaming:main